skeplib/tests/fixtures/sema/invalid/function_equality.sk
fn add(a: Int, b: Int) -> Int {
  return a + b;
}

fn main() -> Int {
  let f: Fn(Int, Int) -> Int = add;
  if (f == add) {
    return 1;
  }
  return 0;
}
